[gd_scene load_steps=12 format=3 uid="uid://da8cxn8q226je"]

[ext_resource type="Script" path="res://scenes/dutch_ingredient.gd" id="1_1756k"]
[ext_resource type="Texture2D" uid="uid://csiqijvgqj3p" path="res://assets/sprites/dutch_oven.png" id="2_2evd6"]
[ext_resource type="AudioStream" uid="uid://vqcendp8xyjq" path="res://assets/sounds/FreeSFX/GameSFX/PowerUp/Retro PowerUP 09.wav" id="3_n3jx1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bnmws"]
atlas = ExtResource("2_2evd6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcky5"]
atlas = ExtResource("2_2evd6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6ab2"]
atlas = ExtResource("2_2evd6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2c8w"]
atlas = ExtResource("2_2evd6")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ylhy"]
atlas = ExtResource("2_2evd6")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uu6yu"]
atlas = ExtResource("2_2evd6")
region = Rect2(64, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_g0ssq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnmws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcky5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6ab2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2c8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ylhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uu6yu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ajs7u"]
radius = 16.0312

[node name="dutch_ingredient" type="Area2D"]
collision_mask = 2
script = ExtResource("1_1756k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_g0ssq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ajs7u")

[node name="pickup_sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 1)
stream = ExtResource("3_n3jx1")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="pickup_sound" to="." method="_on_pickup_sound_finished"]
